actualizacion de archivos

--- a/IntroduccionJS/index.html
+++ b/IntroduccionJS/index.html
@@ -39,7 +39,7 @@
     <!-- <script src="js/0.16.js"></script> -->
     <!-- <script src="js/0.17.js"></script> -->
      <!-- <script src="js/0.18.js"></script> -->
-    <script src="js/0.19.js"></script>
+    <!-- <script src="js/0.19.js"></script> -->
     <!-- <script src="js/0.20.js"></script> -->
     <!-- <script src="js/0.21.js"></script> -->
     <!-- <script src="js/0.22.js"></script> -->
@@ -49,10 +49,11 @@
     <!-- <script src="js/0.26.js"></script> -->
     <!-- <script src="js/0.27.js"></script> -->
     <!-- <script src="js/0.28.js"></script> -->
-    <!-- <script src="js/0.29.js"></script> -->
+    <script src="js/0.29.js"></script>
     <!-- <script src="js/0.30.js"></script> -->
     <!-- <script src="js/0.31.js"></script> -->
     <!-- <script src="js/0.32.js"></script> -->
     <!-- <script src="js/0.33.js"></script> -->
+    <!-- <script src="js/alex.js"></script> -->
 </body>
 </html>
