--- a/IntroduccionJS/index.html
+++ b/IntroduccionJS/index.html
@@ -15,6 +15,7 @@
         <a href="http://www.codigoconjuan.com" target="_blank">codigoconjuan.com</a>
         <p>Introducción a JavaScript</p>
         <p class="hashtag">#DesarrolloWebCompleto</p>
+        <button type="button" id="boton2">Mostrar Nombre</button>
         <button type="button" id="boton">Mostrar Notificación</button>
     </div>
 
@@ -49,11 +50,12 @@
     <!-- <script src="js/0.26.js"></script> -->
     <!-- <script src="js/0.27.js"></script> -->
     <!-- <script src="js/0.28.js"></script> -->
-    <script src="js/0.29.js"></script>
+    <!-- <script src="js/0.29.js"></script> -->
     <!-- <script src="js/0.30.js"></script> -->
+     <!-- <script src="js/0.30.1.js"></script> -->
     <!-- <script src="js/0.31.js"></script> -->
     <!-- <script src="js/0.32.js"></script> -->
-    <!-- <script src="js/0.33.js"></script> -->
+    <script src="js/0.33.js"></script>
     <!-- <script src="js/alex.js"></script> -->
 </body>
 </html>
